# APAuT

./: .gitignore  README.md  environment.yml  exploration-lm.ipynb  exploration.ipynb  finetuning.ipynb  pyproject.toml  run.sh  train.py  vaex.ipynb
