[tool.poetry]
name = "apaut"
version = "0.0.1"
description = ""
authors = ["Christoph Minixhofer <christoph.minixhofer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
transformers = "^3.3.1"
wandb = "^0.10.4"
torch = "^1.6.0"
tensorboard = "^2.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
